--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 body{
-    background-color: #18b7db	;
+    background-color: #273746;
+}
+.timer{
+    color: white;
+}
+.timer-Container{
+    background-color:#515a5a ;
+    display: flex;
+    flex-direction: row;
+    -ms-flex-align: end;
 }
