--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #273746;
+    background-color:  #970303  ;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,32 +18,31 @@ body {
 }
 
 .timer-Container {
-    background-color: #5d6d7e;
+    background-color: #ff8383;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 80vw;
-    max-width: 400px; 
-    height: 30vh; 
-    max-height: 300px;
-    border-radius: 20px;
-    box-shadow: 7px 5px 40px #b2babb;
+    width: 25vw;
+    height: 40vh; 
+    border-radius: 50%;
+    box-shadow: 7px 5px 40px #ff9292;
     padding: 20px;
 }
 
 
 
 .timer {
-    color: #d1f2eb;
-    font-size: 5rem;
+    color: #00ff37;
+    font-size: 13vh;
     font-family: 'Roboto Mono', monospace;
     font-weight: 1000;
 }
 
 .inputs-container {
+    color: #000000;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     gap: 10px;
@@ -56,7 +55,8 @@ body {
     font-size: 1.2rem;
 }
 .inputs-container input {
-    background-color: #5d6d7e;
+    
+    background-color: #ffffff;
     border: none;
     border-radius: 5px;
     color: #d1f2eb;
@@ -66,10 +66,10 @@ body {
 }
 /* Style du bouton Démarrer */
 .start-button {
-    background-color: #5d6d7e;
-    color: #d1f2eb;
+    background-color: #ffffff;
+    color: #00ff0d;
     border: none;
-    border-radius: 10px;
+    border-radius: 40%;
     padding: 15px 30px;
     font-size: 1.5rem;
     font-family: 'Roboto Mono', monospace;
@@ -79,16 +79,15 @@ body {
     transition: background-color 0.3s ease;
 }
 .start-button:hover {
-    background-color: #7b8a97;
+    background-color: #c9facd;
 }
 
 .start-button:active {
-    background-color: #4e5d6c;
+    background-color: #024702;
 }
 .pause-button {
     margin-top: 20px;
-    background-color: #5d6d7e;
-    color: #d1f2eb;
+    background-color: #ffffff;
     border: none;
     border-radius: 10px;
     padding: 15px 30px;
@@ -96,18 +95,18 @@ body {
     font-family: 'Roboto Mono', monospace;
     font-weight: bold;
     cursor: pointer;
-    box-shadow: 3px 3px 10px #b2babb;
+    box-shadow: 3px 3px 10px #ffffff;
     transition: background-color 0.3s ease;
 }
 
 
 .pause-button:hover {
-    background-color: #7b8a97;
+    background-color: #c9facd;
 }
 
 
 .pause-button:active {
-    background-color: #4e5d6c;
+    background-color: #024702;
 }
 
 @media screen and (max-width: 600px) {
