--- a/style.css
+++ b/style.css
@@ -11,10 +11,11 @@ body {
 }
 
 .container {
+    width: 30%;
     text-align: center;
     background-color: rgba(255, 255, 255, 0.9);
     padding: 20px;
-    border-radius: 15px;
+    border-radius: 50%;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
